--- a/universal/links.html
+++ b/universal/links.html
@@ -17,7 +17,7 @@
 <a href="">Join my main Discord server</a>
 <p>This is where I lounge and chat. Join me and my friends!</p>
 <a href="">Join my GKSO server</a>
-<p>This is where I do work and project updates</p>
+<p>This is where I do work, project updates plus video updates from my channel.</p>
 <p><b>YouTube</b></p>
 <a href="">Go to channel</a>
 <p>I upload some content once in a while.</p>
