Putting links into the spaces

--- a/universal/links.html
+++ b/universal/links.html
@@ -11,15 +11,15 @@
 <a href="../index.html">Go back</a>
 <h2>I also exists in these pages:.</h2>
 <p><b>Facebook</b></p>
-<a href="">Go to page</a>
+<a href="../404.html">Go to page [Link deprecated}</a>
 <p>I don't use Facebook much, just some surfing. Mainly used for video notifications.</p>
 <p><b>Discord</b></p>
-<a href="">Join my main Discord server</a>
+<a href="https://discord.gg/r3z5VMCy">Join my main Discord server</a>
 <p>This is where I lounge and chat. Join me and my friends!</p>
-<a href="">Join my GKSO server</a>
+<a href="https://discord.gg/4mPPN6NQyN">Join my GKSO server</a>
 <p>This is where I do work, project updates plus video updates from my channel.</p>
 <p><b>YouTube</b></p>
-<a href="">Go to channel</a>
+<a href="https://www.youtube.com/channel/UCIOnC1uEJyWuUAMK8eRJzKw">Go to channel</a>
 <p>I upload some content once in a while.</p>
 <br>
 </body>
